--- a/queryraiserapp/templates/facultydashboard.html
+++ b/queryraiserapp/templates/facultydashboard.html
@@ -257,8 +257,7 @@
         </script>
     <script>
     function getcomplaintscount() {
-        showSpinner();
-        fetch('/facultycomplaintcount/', {
+        return fetch('/facultycomplaintcount/', {
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -322,20 +321,17 @@
                     }]
                 },
             });
-            hideSpinner();
             } else {
                 console.error('Error fetching Complaints count:', data.error);
-                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching Complaints count:', error);
-            hideSpinner();
+            throw error
         });
     }
     function getrecentcomplaints(){
-        showSpinner();
-        fetch('/facultyrecentcomplaints/',{
+        return fetch('/facultyrecentcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -344,7 +340,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const recentcomplaintTableBody = document.querySelector('#recentcomplaintstable tbody');
             recentcomplaintTableBody.innerHTML = '';
 
@@ -352,7 +347,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="7">No Complaints found at this time.</td>';
                 recentcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -365,18 +359,27 @@
                         <td></td>                    
                     `;
                     recentcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getcomplaintscount();
-        getrecentcomplaints();
+        showSpinner();
+        Promise.all([
+        getcomplaintscount(),
+        getrecentcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
