--- a/queryraiserapp/templates/adminallcomplaints.html
+++ b/queryraiserapp/templates/adminallcomplaints.html
@@ -50,6 +50,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -330,8 +331,7 @@
     </script>
     <script>
     function getallcomplaints(){
-        showSpinner();
-        fetch('/adminallcomplaints/',{
+        return fetch('/adminallcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -340,12 +340,9 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            console.log(data)
             const allcomplaintTableBody = document.querySelector('#allcomplaintstable tbody');
             allcomplaintTableBody.innerHTML = '';
-            hideSpinner();
             if(data.length===0){
-                hideSpinner();
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="10">No Resolved complaints found right now.</td>';
                 allcomplaintTableBody.appendChild(row);
@@ -376,7 +373,7 @@
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error;
         });
     }
     function openComplaintOverlay(button) {
@@ -400,7 +397,17 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getallcomplaints();
+        showSpinner();
+        Promise.all([
+        getallcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
