--- a/queryraiserapp/templates/adminassigntechnician.html
+++ b/queryraiserapp/templates/adminassigntechnician.html
@@ -49,6 +49,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -292,8 +293,8 @@
     </script>
     <script>
     function getnewcomplaints(){
-        showSpinner();
-        fetch('/adminnewcomplaintstable/',{
+        
+        return fetch('/adminnewcomplaintstable/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -302,7 +303,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const newcomplaintTableBody = document.querySelector('#newcomplaintstable tbody');
             newcomplaintTableBody.innerHTML = '';
 
@@ -310,7 +310,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="6">No new complaints found right now.</td>';
                 newcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -325,12 +324,11 @@
                     `;
                     newcomplaintTableBody.appendChild(row);
                 });
-                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error;
         });
     }
     function openComplaintOverlay(button) {
@@ -375,8 +373,9 @@
                 }
             })
             .catch(error => {
-                console.error('Error assigning technician:', error);
                 hideSpinner();
+                console.error('Error assigning technician:', error);
+                
             });
         });
     }
@@ -384,12 +383,21 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getnewcomplaints();
-        getTechnicianFieldsForDropdown();
+        showSpinner();
+        Promise.all([
+        getnewcomplaints(),
+        getTechnicianFieldsForDropdown()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getTechnicianFieldsForDropdown() {
-        showSpinner();
-        fetch('/getfields/', {
+        return fetch('/getfields/', {
             method: 'POST', 
             headers: {
                 'Content-Type': 'application/json',
@@ -398,7 +406,6 @@
         }) 
             .then(response => response.json())
             .then(data => {
-                hideSpinner();
                 const technicianFieldSelect = document.getElementById('technicianfield');
                 technicianFieldSelect.innerHTML = '<option value="" disabled selected>Select Field</option>';
                 data.forEach(field => {
@@ -410,7 +417,7 @@
             })
             .catch(error => {
                 console.error('Error fetching technician fields:', error);
-                hideSpinner();
+                throw error;
             });
     }
     function updateTechnicianDropdown(field_name) {
@@ -435,16 +442,15 @@
                         option.value = technician.technician_number; 
                         option.text = technician.technician_name;
                         technicianSelect.add(option);
-                        hideSpinner();
                     });
                 } else {
                     console.error('Error fetching technicians:', data.error);
-                    hideSpinner();
                 }
             })
             .catch(error => {
-                console.error('Error fetching technicians:', error);
                 hideSpinner();
+                console.error('Error fetching technicians:', error);
+                
             });
         } else {
             const technicianSelect = document.getElementById('technicianSelect');
