--- a/queryraiserapp/templates/adminnewcomplaints.html
+++ b/queryraiserapp/templates/adminnewcomplaints.html
@@ -49,6 +49,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -306,8 +307,7 @@
     </script>
     <script>
     function getnewcomplaints(){
-        showSpinner();
-        fetch('/adminnewcomplaintstable/',{
+        return fetch('/adminnewcomplaintstable/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -316,15 +316,12 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            console.log(data)
             const newcomplaintTableBody = document.querySelector('#newcomplaintstable tbody');
             newcomplaintTableBody.innerHTML = '';
-            hideSpinner();
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="6">No new complaints found right now.</td>';
                 newcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -343,12 +340,11 @@
                     `;
                     newcomplaintTableBody.appendChild(row);
                 });
-                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -371,6 +367,19 @@
     function closeComplaintOverlay() {
         document.getElementById('complaintOverlay').style.display = 'none';
     }
+    document.addEventListener('DOMContentLoaded', () => {
+        showSpinner();
+        Promise.all([
+        getnewcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
+    });
     document.addEventListener('DOMContentLoaded', () => {
         getnewcomplaints();
     });
