--- a/queryraiserapp/templates/adminpage.html
+++ b/queryraiserapp/templates/adminpage.html
@@ -49,6 +49,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -295,8 +296,7 @@ navLinks.forEach(link => {
         document.querySelector('.deaparment-overlay').classList.remove('active');
     }
     function getdepartments() {
-        showSpinner();
-        fetch('/getdepartments/', {
+        return fetch('/getdepartments/', {
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -307,12 +307,10 @@ navLinks.forEach(link => {
         .then(data => {
             const departmentTableBody = document.querySelector('#Departmenttable tbody');
             departmentTableBody.innerHTML = '';
-            hideSpinner();
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="5">No Departments found.</td>';
                 departmentTableBody.appendChild(row);
-                hideSpinner();
             }
             else{
                 data.forEach(department => {
@@ -340,12 +338,11 @@ navLinks.forEach(link => {
                     department.name = departmentNameCell.textContent.trim();
                 });
                 });
-                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching departments:', error);
-            hideSpinner();
+            throw error;
         });
     }
     document.getElementById('adddepartmentform').addEventListener('submit', function(event) {
@@ -368,16 +365,14 @@ navLinks.forEach(link => {
                 form.reset();
                 document.querySelector('.overlay').classList.remove('active');
                 getdepartments();
-                hideSpinner();
             } else {
                 alert('Failed to add department: ' + data.error);
-                hideSpinner();
             }
         })
         .catch(error => {
+            hideSpinner();
             console.error('Error adding department:', error);
             alert('Error adding department. Please try again later.');
-            hideSpinner();
         });
     });
     function saveChanges(departmentCode) {
@@ -405,21 +400,18 @@ navLinks.forEach(link => {
             return response.json();
         })
         .then(data => {
-            hideSpinner();
             if(data.success){
                 alert('Changes saved successfully');
                 getdepartments();
-                hideSpinner();
             }
             else{
                 alert('Unable to save changes.');
-                hideSpinner();
             }
         })
         .catch(error => {
+            hideSpinner();
             console.error('Error saving changes:', error);
             alert('Error saving changes. Please try again later.');
-            hideSpinner();
         });
     }
     function deleteDepartment(departmentCode){
@@ -443,23 +435,31 @@ navLinks.forEach(link => {
             if(data.success){
                 alert('Deleted Successfully.');
                 getdepartments();
-                hideSpinner();
             }
             else{
                 alert('Failed to delete.');
-                hideSpinner();
             }
         })
         .catch(error=>{
-            console.error('Error saving changes:', error);
-            alert('Error saving changes. Please try again later.');
             hideSpinner();
+            console.error('Error saving changes:', error);
+            alert('Error saving changes. Please try again later.');   
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getdepartments();
-
+        showSpinner();
+        Promise.all([
+             getdepartments()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
+
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
