--- a/queryraiserapp/templates/adminresolvedcomplaints.html
+++ b/queryraiserapp/templates/adminresolvedcomplaints.html
@@ -49,6 +49,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -325,8 +326,7 @@
     </script>
     <script>
     function getresolvedcomplaints(){
-        showSpinner();
-        fetch('/adminresolvedcomplaints/',{
+        return fetch('/adminresolvedcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -335,7 +335,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const resolvedcomplaintTableBody = document.querySelector('#resolvedcomplaintstable tbody');
             resolvedcomplaintTableBody.innerHTML = '';
 
@@ -343,7 +342,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="10">No Resolved complaints found right now.</td>';
                 resolvedcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -365,13 +363,12 @@
                         </button></td>
                     `;
                     resolvedcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -394,7 +391,17 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getresolvedcomplaints();
+        showSpinner();
+        Promise.all([
+        getresolvedcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
