--- a/queryraiserapp/templates/admintechnician.html
+++ b/queryraiserapp/templates/admintechnician.html
@@ -51,6 +51,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -291,8 +292,20 @@
     </script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            getTechnicians(); 
-            getTechnicianFieldsForDropdown();
+            showSpinner();
+            Promise.all([
+            getTechnicians(),
+            getTechnicianFieldsForDropdown()
+            ])
+            .then(() => {
+                hideSpinner(); 
+            })
+            .catch(error => {
+                console.error('Error fetching data:', error);
+                hideSpinner();
+            });
+        });
+        document.addEventListener('DOMContentLoaded', () => {
             const searchInput = document.querySelector('.search input');
             searchInput.addEventListener('input', filterTechnician); 
         });
@@ -321,8 +334,7 @@
             }
         }
         function getTechnicians() {
-            showSpinner();
-            fetch('/gettechnicians/',{
+            return fetch('/gettechnicians/',{
                 method: 'POST', 
                 headers: {
                     'Content-Type': 'application/json',
@@ -333,7 +345,6 @@
                 .then(data => {
                     const technicianTableBody = document.querySelector('#techniciantable tbody');
                     technicianTableBody.innerHTML = '';
-                    hideSpinner();
                     if (data.length > 0) {
                         data.forEach(technician => {
                             const row = document.createElement('tr');
@@ -349,24 +360,21 @@
                 
                             `;
                             technicianTableBody.appendChild(row);
-                            hideSpinner();
                         });
                     } else {
                         const row = document.createElement('tr');
                         row.innerHTML = '<td colspan="4">No technicians found.</td>'; 
                         technicianTableBody.appendChild(row);
-                        hideSpinner();
                     }
                 })
                 .catch(error => {
                     console.error('Error fetching technicians:', error);
-                    hideSpinner();
+                    throw error
                 });
         }
 
         function getTechnicianFieldsForDropdown() {
-            showSpinner();
-            fetch('/getfields/', {
+            return fetch('/getfields/', {
                 method: 'POST', 
                 headers: {
                     'Content-Type': 'application/json',
@@ -375,7 +383,6 @@
             }) 
                 .then(response => response.json())
                 .then(data => {
-                    hideSpinner();
                     const technicianFieldSelect = document.getElementById('technicianfield');
                     technicianFieldSelect.innerHTML = '<option value="" disabled selected>Select Field</option>'; // Clear previous options
                     data.forEach(field => {
@@ -384,11 +391,11 @@
                         option.text = field.field_name;
                         technicianFieldSelect.add(option);
                     });
-                    hideSpinner();
+                    
                 })
                 .catch(error => {
                     console.error('Error fetching technician fields:', error);
-                    hideSpinner();
+                    throw error
                 });
         }
         function saveTechnician(technicianNumber) {
@@ -430,17 +437,15 @@
             })
             .then(response => response.json())
             .then(data => {
+                hideSpinner()
                 if (data.success) {
                     alert('Changes saved successfully.');
-                    getTechnicians(); 
                     hideSpinner();
                 } else {
                     alert('Failed to save changes: ' + data.error); 
-                    hideSpinner();
                 }
             })
             .catch(error => console.error('Error:', error));
-            hideSpinner();
         }
         function deleteTechnician(technicianNumber, technicianField) {
             if (confirm("Are you sure you want to delete this Technician? This action cannot be undone.")) {
@@ -462,10 +467,8 @@
                     if (data.success) {
                         alert('Technician deleted successfully.');
                         getTechnicians(); 
-                        hideSpinner();
                     } else {
                         alert('Failed to delete technician: ' + data.error); 
-                        hideSpinner();
                     }
                 })
                 .catch(error => console.error('Error:', error));
@@ -502,18 +505,15 @@
                 if (data.success) {
                     alert('Technician added successfully.');
                     form.reset(); 
-                    hideAddForms(); 
                     getTechnicians(); 
-                    hideSpinner();
                 } else {
                     alert('Failed to add technician.'+data.error); 
-                    hideSpinner();
                 }
             })
             .catch(error => {
+                hideSpinner();
                 console.error('Error adding technician:', error);
                 alert('Error adding technician. Please try again later.', error);
-                hideSpinner();
             });
             hideSpinner();
         });
