--- a/queryraiserapp/templates/admintechnicianpending.html
+++ b/queryraiserapp/templates/admintechnicianpending.html
@@ -49,6 +49,7 @@
                 <img src="{% static 'images/loading.gif' %}" alt="">
             </div>
         </div>
+        <div id="overlay-container"></div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -324,8 +325,7 @@
     </script>
     <script>
     function getpendingcomplaints(){
-        showSpinner();
-        fetch('/admintechnicianpending/',{
+        return fetch('/admintechnicianpending/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -334,15 +334,12 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            console.log(data)
             const pendingcomplaintTableBody = document.querySelector('#pendingcomplaintstable tbody');
             pendingcomplaintTableBody.innerHTML = '';
-            hideSpinner();
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="9">No Pending complaints found right now.</td>';
                 pendingcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -363,13 +360,12 @@
                         </button></td>
                     `;
                     pendingcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -392,8 +388,19 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getpendingcomplaints();
+        showSpinner();
+        Promise.all([
+        getpendingcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
+
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
