--- a/queryraiserapp/templates/facultyallcomplaints.html
+++ b/queryraiserapp/templates/facultyallcomplaints.html
@@ -187,8 +187,7 @@
         </script>
     <script>
     function getallcomplaints(){
-        showSpinner();
-        fetch('/facultyallcomplaints/',{
+        return fetch('/facultyallcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -197,7 +196,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const recentcomplaintTableBody = document.querySelector('#recentcomplaintstable tbody');
             recentcomplaintTableBody.innerHTML = '';
 
@@ -205,7 +203,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="7">No Complaints found at this time.</td>';
                 recentcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -219,16 +216,25 @@
                     `;
                     recentcomplaintTableBody.appendChild(row);
                 });
-                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getallcomplaints();
+        showSpinner();
+        Promise.all([
+        getallcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
