--- a/queryraiserapp/templates/facultyclosedcomplaints.html
+++ b/queryraiserapp/templates/facultyclosedcomplaints.html
@@ -249,8 +249,7 @@
     </script>
     <script>
     function getclosedcomplaints(){
-        showSpinner();
-        fetch('/faculty_get_closed_complaints/',{
+        return fetch('/faculty_get_closed_complaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -259,7 +258,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const closedcomplaintTableBody = document.querySelector('#closedcomplaintstable tbody');
             closedcomplaintTableBody.innerHTML = '';
 
@@ -267,7 +265,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="8">No closed complaints found right now.</td>';
                 closedcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -288,12 +285,12 @@
                         </button></td>
                     `;
                     closedcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -321,7 +318,17 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getclosedcomplaints();
+        showSpinner();
+        Promise.all([
+        getclosedcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
