--- a/queryraiserapp/templates/facultynewcomplaints.html
+++ b/queryraiserapp/templates/facultynewcomplaints.html
@@ -185,8 +185,7 @@
         </script>
     <script>
     function getallcomplaints(){
-        showSpinner();
-        fetch('/facultynewcomplaints/',{
+        return fetch('/facultynewcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -195,8 +194,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
-            console.log(data)
             const newcomplaintTableBody = document.querySelector('#newcomplaintstable tbody');
             newcomplaintTableBody.innerHTML = '';
 
@@ -204,7 +201,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="5">No New Complaints found at this time.</td>';
                 newcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -216,17 +212,26 @@
                         <td style="color:#525b75;">${complaint.status}</td>                
                     `;
                     newcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
-            hideSpinner();
+            throw error
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getallcomplaints();
+        showSpinner();
+        Promise.all([
+        getallcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
