--- a/queryraiserapp/templates/facultyresolvedcomplaints.html
+++ b/queryraiserapp/templates/facultyresolvedcomplaints.html
@@ -228,8 +228,7 @@
     </script>
     <script>
     function getresolvedcomplaints(){
-        showSpinner();
-        fetch('/facultyresolvedcomplaints/',{
+        return fetch('/facultyresolvedcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -238,7 +237,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const resolvedcomplaintTableBody = document.querySelector('#resolvedcomplaintstable tbody');
             resolvedcomplaintTableBody.innerHTML = '';
 
@@ -246,7 +244,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="8">No resolved complaints found right now.</td>';
                 resolvedcomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -266,13 +263,12 @@
                         </button></td>
                     `;
                     resolvedcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
-            hideSpinner();
             console.error('Error fetching recent complaints:', error);
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -294,9 +290,18 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getresolvedcomplaints();
+        showSpinner();
+        Promise.all([
+        getresolvedcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
-    
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
