--- a/queryraiserapp/templates/facutlypendingcomplaints.html
+++ b/queryraiserapp/templates/facutlypendingcomplaints.html
@@ -228,8 +228,7 @@
     </script>
     <script>
     function getpendingcomplaints(){
-        showSpinner();
-        fetch('/facultypendigncomplaints/',{
+        return fetch('/facultypendigncomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
@@ -238,7 +237,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const facultycomplaintTableBody = document.querySelector('#pendingcomplaintstable tbody');
             facultycomplaintTableBody.innerHTML = '';
 
@@ -246,7 +244,6 @@
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="8">No pending complaints found right now.</td>';
                 facultycomplaintTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -266,13 +263,12 @@
                         </button></td>
                     `;
                     facultycomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 });
             }
         })
         .catch(error => {
-            hideSpinner();
             console.error('Error fetching recent complaints:', error);
+            throw error
         });
     }
     function openComplaintOverlay(button) {
@@ -293,9 +289,18 @@
         document.getElementById('complaintOverlay').style.display = 'none';
     }
     document.addEventListener('DOMContentLoaded', () => {
-        getpendingcomplaints();
+        showSpinner();
+        Promise.all([
+        getpendingcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
-    
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
