--- a/queryraiserapp/templates/technicianclosedcomplaints.html
+++ b/queryraiserapp/templates/technicianclosedcomplaints.html
@@ -235,8 +235,7 @@
         </script>
         <script>
         function getclosedcomplaints(){
-            showSpinner();
-        fetch('/technicianclosedcomplaints/',{
+        return fetch('/technicianclosedcomplaints/',{
                 method: 'POST',
                 headers: {
                     'X-CSRFToken': getCookie('csrftoken'),
@@ -245,15 +244,12 @@
             })
             .then(response => response.json()) 
             .then(data => {
-                console.log(data)
                 const closedcomplaintTableBody = document.querySelector('#closedcomplaintstable tbody');
                 closedcomplaintTableBody.innerHTML = '';
-                hideSpinner();
                 if(data.length===0){
                     const row = document.createElement('tr');
                     row.innerHTML = '<td colspan="6">No closed complaints found right now.</td>';
                     closedcomplaintTableBody.appendChild(row);
-                    hideSpinner();
                 } else {
                     data.forEach(complaint => { 
                         const row = document.createElement('tr');
@@ -272,13 +268,12 @@
                             </button></td>
                         `;
                         closedcomplaintTableBody.appendChild(row);
-                        hideSpinner();
                     });
                 }
             })
             .catch(error => {
                 console.error('Error fetching recent complaints:', error);
-                hideSpinner();
+                throw error
             });
         }
         function openComplaintOverlay(button) {
@@ -304,8 +299,19 @@
             document.getElementById('complaintOverlay').style.display = 'none';
         }
         document.addEventListener('DOMContentLoaded', () => {
-            getclosedcomplaints();
+            showSpinner();
+            Promise.all([
+            getclosedcomplaints()
+            ])
+            .then(() => {
+                hideSpinner(); 
+            })
+            .catch(error => {
+                console.error('Error fetching data:', error);
+                hideSpinner();
+            });
         });
+    
         function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
