--- a/queryraiserapp/templates/technicianupdatestatus.html
+++ b/queryraiserapp/templates/technicianupdatestatus.html
@@ -181,8 +181,8 @@
     </script>
     <script>
     function getassignedcomplaints(){
-        showSpinner();
-        fetch('/techniciangetupdatestatus/', {
+    
+        return fetch('/techniciangetupdatestatus/', {
             method: 'POST', 
             headers: {
                 'Content-Type': 'application/json',
@@ -191,14 +191,12 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            hideSpinner();
             const updatecompliantTableBody = document.querySelector('#updatecompliantstable tbody');
             updatecompliantTableBody.innerHTML = ''; 
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="8">No assigned complaints found right now.</td>';
                 updatecompliantTableBody.appendChild(row);
-                hideSpinner();
             } else {
                 data.forEach(complaint => {
                     const row = document.createElement('tr');
@@ -232,8 +230,8 @@
             }
         }) 
         .catch(error => {
-            hideSpinner();
             console.error('Error fetching complaints:', error);
+            throw error
         });
     }
 
@@ -276,11 +274,9 @@
         .then(data => {
             hideSpinner();
             if (data.success) {
-                hideSpinner();
                 alert('Status Updated Successfully');
                 getassignedcomplaints();
             } else {
-                hideSpinner();
                 alert('Failed to update status : ' + data.error);
             }
         })
@@ -290,9 +286,18 @@
             alert('Error in changing status.Please try again later.');
         });
     }
-
     document.addEventListener('DOMContentLoaded', () => {
-        getassignedcomplaints(); 
+        showSpinner();
+        Promise.all([
+        getassignedcomplaints()
+        ])
+        .then(() => {
+            hideSpinner(); 
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+            hideSpinner();
+        });
     });
     function getCookie(name) {
         let cookieValue = null;
